fix: remove extra padding

--- a/blocks/header/__social-item/_wided/header__social-item_wided.css
+++ b/blocks/header/__social-item/_wided/header__social-item_wided.css
@@ -3,10 +3,6 @@
   border-top: 1px solid var(--black);
 }
 
-.header__social-item_wided .header__social-link {
-  padding: 16px 20px 18px 28px;
-}
-
 @media screen and (min-width: 1440px) {
   .header__social-item_wided {
     width: auto;
